--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href='https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css' rel='stylesheet'>
     <script src='https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js'></script>
     <link rel='stylesheet' href='css/style.css'>
-    <link rel='stylesheet' href='css/modal-style.css'>
+    <link rel='stylesheet' href='css/modal-html-style.css'>
 
     <title>Title</title>
     <link rel='icon' href='images/favicon.ico' type='image/x-icon'>
@@ -15,15 +15,25 @@
 
 <body>
 
-    
+    <div class="container m-2">
+        <div class="card" style="width: 23rem;">
+            <div class="card-body text-center">
+                <h3 class="card-title">Display properties of an ARRAY of an OBJECT</h3>
+                <h4 class="card-text"><span id="movieDisplay" style="font-weight: bold;"></span></h4>
+            </div>
+        </div>
+    </div>
 
-    <script src='js/variables.js'></script>
-    <script src='js/console-display.js'></script>
-    <script src='js/my-helpers.js'></script>
-    <script src='js/helpers-full.js'></script>
-    <script src='js/secret-variables.js'></script>
-    <script src='js/modal-html.js'></script>
-    <script src='js/app.js'></script>
+    <!-- <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s
+                content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+    </div> -->
+
     <script src='js/script.js'></script>
 
 </body>
