--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
         </div>
     </div>
 
+    <div class="container m-2">
+        <div class="card" style="width: 23rem;">
+            <div class="card-body">
+                <h3 class="card-title text-center">Display List</h3>
+                <h4 class="card-text"><span id="movieListSpan" style="font-weight: bold;"></span></h4>
+                <ul id="movieList"></ul>
+            </div>
+        </div>
+    </div>
+
+
     <!-- <div class="card" style="width: 18rem;">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
