feat: added clickable list from object

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <h6 class="card-subtitle">list movies in li</h6>
                 </div>
                 <h4 class="card-text"><span id="movieListSpan" style="font-weight: bold;"></span></h4>
-                <ul id="movieListforEach"></ul>
+                <ul id="movieList-forEach"></ul>
             </div>
         </div>
 
@@ -42,7 +42,7 @@
                     <h6 class="card-subtitle">list movies using map()</h6>
                 </div>
                 <h4 class="card-text"><span id="movieListSpan" style="font-weight: bold;"></span></h4>
-                <ul id="movieListmap"></ul>
+                <ul id="movieList-map"></ul>
             </div>
         </div>
 
@@ -53,7 +53,7 @@
                     <h6 class="card-subtitle">clickable list of movies using map()</h6>
                 </div>
                 <h4 class="card-text"><span id="movieListSpan" style="font-weight: bold;"></span></h4>
-                <ul id="movieListmap"></ul>
+                <ul id="movieList-click"></ul>
             </div>
         </div>
 
