--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="card" style="width: 30rem;">
             <div class="card-body">
                 <div class="text-center">
-                    <h3 class="card-title">Display List</h3>
+                    <h3 class="card-title">Clickable List</h3>
                     <h6 class="card-subtitle">clickable list of movies using map()</h6>
                 </div>
                 <h4 class="card-text"><span id="movieListSpan" style="font-weight: bold;"></span></h4>
@@ -60,6 +60,7 @@
 
 
         <script src='js/script.js'></script>
+        <script src='js/test.js'></script>
 
 </body>
 
